# NSWI164

./: CHANGELOG.md  Combined.dot  DSL.dot  LilyPond.dot  Makefile  NOTICE  NSWI164.cabal  README.md  hie.yaml  sample.dsl  sample.lilypond
src/: Main.hs  NoteName.hs
src/DSL/: AST.hs  Lexer.hs  Parser.hs
src/DSL/Parser/: Token.hs
src/DSL2LilyPond/: Translate.hs
src/LilyPond/: AST.hs  Pretty.hs
src/NoteName/: Pretty.hs
tools/Graphs/src/: Graphs.hs  Visualize.hs
