cabal-version:      2.4
name:               NSWI164
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jiriklepl
maintainer:         jiriklepl@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable NSWI164
    ghc-options:      -Wall
    main-is:          Main.hs
    other-modules:    DSL.AST,
                      DSL.Parser,
                      DSL.Parser.Token,
                      DSL.Lexer,
                      DSL2LilyPond.Translate,
                      LilyPond.AST,
                      LilyPond.Pretty,
                      NoteName,
                      NoteName.Pretty
    extensions: Safe, LambdaCase, NamedFieldPuns
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        megaparsec ^>=9.0.1,
        containers ^>=0.6.4.1,
        lens >=5.0.1 && <5.2,
        mtl ^>=2.2.2,
        prettyprinter ^>=1.7.1

    hs-source-dirs:   src
    default-language: Haskell2010
