cabal-version:      2.4
name:               NSWI164
version:            0.1.0.0

synopsis:           This project implements the term project of NSWI164 at MFF-UK
description:        This project implements the term project of NSWI164 at MFF-UK.                    
                    It uses the Megaparsec library for parsing and the Prettyprinter library for printing.
category:           Development

homepage:           https://github.com/jiriklepl/NSWI164
bug-reports:        https://github.com/jiriklepl/NSWI164/issues

license:            Apache-2.0
license-file:       LICENSE

author:             Jiří Klepl
maintainer:         jiriklepl@seznam.cz

extra-source-files:
    CHANGELOG.md
    README.md
    LICENSE
    NOTICE

source-repository head
  type:               git
  location:           https://github.com/jiriklepl/NSWI164

common options
    ghc-options:      -Wall -Wextra

    default-extensions: LambdaCase, NamedFieldPuns, DeriveDataTypeable
    default-language: Haskell2010

executable Graphs
    import:           options

    main-is:          Graphs.hs
    other-modules:    DSL.AST,
                      LilyPond.AST,
                      NoteName,
                      Visualize

    hs-source-dirs:   src, tools/Graphs/src

    other-extensions: NoImplicitPrelude, Safe, Trustworthy, TemplateHaskell, ScopedTypeVariables

    build-depends:
        base >=4.13.0.0 && <4.17,
        template-haskell ^>=2.17,
        prettyprinter ^>=1.7.1,
        containers ^>=0.6.4.1,


executable Translator
    import:           options

    main-is:          Main.hs
    other-modules:    DSL.AST,
                      DSL.Parser,
                      DSL.Parser.Token,
                      DSL.Lexer,
                      DSL2LilyPond.Translate,
                      LilyPond.AST,
                      LilyPond.Pretty,
                      NoteName,
                      NoteName.Pretty

    other-extensions: NoImplicitPrelude, Safe
    hs-source-dirs:   src

    build-depends:
        base >=4.13.0.0 && <4.17,
        megaparsec ^>=9.0.1,
        containers ^>=0.6.4.1,
        prettyprinter ^>=1.7.1,
        template-haskell ^>=2.17,
